@@ -119,7 +119,7 @@ EOF
 
 AC_OUTPUT([Makefile \
            lib/Makefile lib/javacomp.sh lib/javaexec.sh \
-           intl/Makefile \
+           intl/Makefile intl-java/Makefile \
            src/Makefile \
            po/Makefile.in \
            doc/Makefile man/Makefile man/x-to-1 \
