@@ -1,0 +1,4 @@
+2001-09-08  Bruno Haible  <haible@clisp.cons.org>
+
+	* gnu/gettext/GettextResource.java: New file.
+	* Makefile.am: New file.
